--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,12 @@ spring.jpa.properties.hibernate.connection.CharSet=utf-8
 spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
 spring.jpa.properties.hibernate.connection.useUnicode=true
 
+spring.main.allow-circular-references=true
+#spring.mvc.cors.allowed-origins=*
+#spring.mvc.cors.allowed-methods=GET,PUT,POST,PATCH,DELETE,OPTIONS
+
+#control session time when ends
+server.servlet.session.timeout=1h
+
+
 
