- implemented getAllUsersOrFilter method's logic  from -> * endpoint to load a list of contacts. Query param ?filter="text" for full text search. This parameter is optional. - there is written database H2 file - resources/database/contacts.mv.db - there is written users_db.json , I prefer json instead of .sql file but they could be used together.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:contacts
+#spring.datasource.url=jdbc:h2:mem:contacts
+spring.datasource.url=jdbc:h2:file:../src/main/resources/database/contacts
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=1234
@@ -19,7 +20,7 @@ spring.main.allow-circular-references=true
 #spring.mvc.cors.allowed-origins=*
 #spring.mvc.cors.allowed-methods=GET,PUT,POST,PATCH,DELETE,OPTIONS
 
-#control session time when ends
+#control session time when ends if user is inactive
 server.servlet.session.timeout=1h
 
 
