--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,40 @@
-version: '3.8'
-services:
-  db:
-    image: mongo:latest
-    ports:
-      - '27017:27017'
-    volumes:
-      - db:/database/contacts.mv.db
-volumes:
-  db:
-    driver:
-      local
+##version: '3.8'
+##services:
+##  db:
+##    image: mongo:latest
+##    ports:
+##      - '27017:27017'
+##    volumes:
+##      - db:/database/contacts.mv.db
+##volumes:
+##  db:
+##    driver:
+##      local
+#version: '3.8'
+#
+#services:
+#  db:
+#    image: mongo:latest
+#    ports:
+#      - '27017:27017'
+#    volumes:
+#      - db_data:/data/db
+#
+#  backend:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - '8080:8080'
+#    depends_on:
+#      - db
+#
+#  frontend:
+#    build:
+#      context: ./frontend
+#      dockerfile: Dockerfile
+#    ports:
+#      - '4200:4200'
+#
+#volumes:
+#  db_data:
